changes in adding user
