# static/swagger.yaml
@@ -1,35 +1,44 @@
 swagger: '2.0'
 info:
   description: >-
-    This API is a set of functions that provides consumer and supplier with all ecosystem services
-  version: 1.0.1
+    This API is a set of functions that provides consumer and supplier with all
+    ecosystem services
+  version: 1.0.2
   title: Internet of Things Analytical Ecosystem API
   contact: {}
 host: 'localhost:5000'
 basePath: /
 tags:
-- name: Algorithms
-  description: Everything about Algorithms
-  externalDocs:
-    description: Find out more
-    url: 'http://tobeaddedinthefuture' # TODO
-- name: Dataset
-  description: Access to data
-- name: User
-  description: User manipulation
-  externalDocs:
-    description: Find out more about user access
-    url: 'http://tobeaddedinthefuture' # TODO
-- name: Supplier API
-  description: Supplier functions
-- name: Consumer API
-  description: Consumer functions
+  - name: Algorithms
+    description: Everything about Algorithms
+    externalDocs:
+      description: Find out more
+      url: 'http://tobeaddedinthefuture'
+  - name: Dataset
+    description: Access to data
+  - name: Admin
+    description: Administration API
+  - name: User
+    description: User manipulation
+    externalDocs:
+      description: Find out more about user access
+      url: 'http://tobeaddedinthefuture'
+  - name: Supplier API
+    description: Supplier functions
+  - name: Consumer API
+    description: Consumer functions
 schemes:
   - http
 securityDefinitions:
-  GoogleIdToken: # OpenAPI 2.0 is incompatible with RFC6750 yet
+  GoogleIdToken:
     description: >-
-      [Google Identity Platform](https://developers.google.com/identity/) authentication with id_token as authentication key. The security definision in OpenAPI 2.0 lacks the 'Bearer ' string before <id_token> as described in [RFC 6750 section 2.1](https://tools.ietf.org/html/rfc6750#section-2.1) Please insert 'Bearer ' manualy. Remember to insert required header in your application requests 'Authentication &#58; Bearer <id_token>'
+      [Google Identity Platform](https://developers.google.com/identity/)
+      authentication with id_token as authentication key. The security
+      definision in OpenAPI 2.0 lacks the 'Bearer ' string before <id_token> as
+      described in [RFC 6750 section
+      2.1](https://tools.ietf.org/html/rfc6750#section-2.1) Please insert
+      'Bearer ' manualy. Remember to insert required header in your application
+      requests 'Authentication &#58; Bearer <id_token>'
     type: apiKey
     in: header
     name: Authorization
@@ -37,40 +46,58 @@ paths:
   /user:
     post:
       tags:
-      - User
+        - User
+        - Admin
       summary: Create a new user
-      description: This can only be done by authenticated user.
+      description: This can only be done by admin.
       operationId: createUser
       produces:
-      - application/json
+        - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
-      - in: body
-        name: body
-        description: Created user object
-        required: true
-        schema:
-          $ref: '#/definitions/User'
+        - in: body
+          name: body
+          description: User object to be created
+          required: true
+          schema:
+            $ref: '#/definitions/User'
       responses:
-        default:
-          description: success
-  /user/{userID}:
+        '200':
+          description: OK
+  '/user/signon':
+    post:
+      tags:
+        - User
+      summary: Create a new user by self sign-on.
+      description: >-
+        This can only be done by a user authenticated in Google Identity
+        Platform. User data is decoded form id_token. Additional information
+        supposed to be added through '/user/{userID} PUT'
+      operationId: selfSignOn
+      produces:
+        - application/json
+      security:
+        - GoogleIdToken: []
+      responses:
+        '200':
+          description: OK
+  '/user/{userID}':
     get:
       tags:
-      - User
+        - User
       summary: Get user by user ID
       description: Get user info - requres authorization
       operationId: getUserByID
       produces:
-      - application/json
+        - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
-      - name: username
-        in: path
-        required: true
-        type: string
+        - name: userID
+          in: path
+          required: true
+          type: string
       responses:
         '200':
           description: success
@@ -82,25 +109,25 @@ paths:
           description: User not found
     put:
       tags:
-      - User
+        - User
       summary: Update user
       description: This can only be done by the authorized user.
       operationId: updateUser
       produces:
-      - application/json
+        - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
-      - name: username
-        in: path
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: Updated user object
-        required: true
-        schema:
-          $ref: '#/definitions/User'
+        - name: userID
+          in: path
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Updated user object
+          required: true
+          schema:
+            $ref: '#/definitions/User'
       responses:
         '400':
           description: Invalid user supplied
@@ -108,20 +135,20 @@ paths:
           description: User not found
     delete:
       tags:
-      - User
+        - User
       summary: Delete user
       description: This can only be done by the logged in user.
       operationId: deleteUser
       produces:
-      - application/json
+        - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
-      - name: username
-        in: path
-        description: The name that needs to be deleted
-        required: true
-        type: string
+        - name: userID
+          in: path
+          description: The name that needs to be deleted
+          required: true
+          type: string
       responses:
         '400':
           description: Invalid username supplied
@@ -134,13 +161,15 @@ paths:
         - Dataset
       summary: Returns information about the stored Datasets
       description: >-
-        The Datasets endpoint returns information about the stored Datasets. The response includes the display name and other details about each dataset. It also allows full-text search of tags.
+        The Datasets endpoint returns information about the stored Datasets. The
+        response includes the display name and other details about each dataset.
+        It also allows full-text search of tags.
       operationId: getDatasets
       consumes: []
       produces:
         - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: tags
           in: query
@@ -171,7 +200,7 @@ paths:
       produces:
         - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - in: body
           name: body
@@ -199,7 +228,7 @@ paths:
       produces:
         - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: datasetID
           in: path
@@ -228,7 +257,7 @@ paths:
         - application/json
       produces: []
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: datasetID
           in: path
@@ -260,8 +289,7 @@ paths:
       tags:
         - Consumer API
         - Algorithms
-      summary: >-
-        All available Algorithms descriptions.
+      summary: All available Algorithms descriptions.
       description: >-
         The Algorithms endpoint returns information about the available
         algorithms. The response includes the display name and other details
@@ -295,7 +323,7 @@ paths:
         - application/json
       produces: []
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - in: body
           name: body
@@ -322,10 +350,10 @@ paths:
       tags:
         - Algorithms
         - Consumer API
-      summary: >-
-        Detailed description of an Algorithm.
+      summary: Detailed description of an Algorithm.
       description: >-
-        The Algorithm Details endpoint returns detailed description of a given algorithm.
+        The Algorithm Details endpoint returns detailed description of a given
+        algorithm.
       operationId: getAlgorithmsAlgorithm
       consumes: []
       produces:
@@ -356,7 +384,7 @@ paths:
       produces:
         - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: algorithmID
           in: path
@@ -395,7 +423,7 @@ paths:
         - application/json
       produces: []
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: algorithmID
           in: path
@@ -432,7 +460,7 @@ paths:
       consumes: []
       produces: []
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: algorithmID
           in: path
@@ -464,7 +492,7 @@ paths:
       produces:
         - application/json
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: algorithmID
           in: path
@@ -501,7 +529,7 @@ paths:
       consumes: []
       produces: []
       security:
-      - GoogleIdToken: []
+        - GoogleIdToken: []
       parameters:
         - name: algorithmID
           in: path
@@ -532,7 +560,7 @@ definitions:
     properties:
       algorithmBLOB:
         type: string
-        description: The main algorithm program, definitions, data etc.
+        description: 'The main algorithm program, definitions, data etc.'
       algorithmDescription:
         type: string
         description: detailed description of the algorithm.
@@ -644,7 +672,7 @@ definitions:
         type: string
         description: Curent set of data in dataset.
   User:
-    type: "object"
+    type: object
     properties:
       userID:
         type: integer
